--- a/Views/topics/exercise_comp.html
+++ b/Views/topics/exercise_comp.html
@@ -14,10 +14,10 @@
                       <option value="3">/</option>
                     </select>
                   </div>
-                  <div class="col-auto float-end">
+                  <div class="col-auto float-end" id="single_x_single_countrPanel" style="display: none;">
                     <div >
                       <div id="countdownClock" class="countdown-clock">
-                        <span id="countdownNumber">10</span>
+                        <span id="single_x_single_countdwnNum"  class="">10</span>
                       </div>
                     </div>
                   </div>
@@ -35,7 +35,7 @@
                   <div class="row">
                     <div class="col-12">
                       <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                        <input class="form-check-input" type="checkbox" role="switch" id="single_x_single_patience_switch">
                         <label class="form-check-label" for="flexSwitchCheckChecked">Check Your Patience</label>
                       </div>
                     </div>
@@ -60,6 +60,13 @@
                       <option value="3">/</option>
                     </select>
                   </div>
+                  <div class="col-auto float-end" id="single_x_double_countrPanel">
+                    <div >
+                      <div id="countdownClock" class="countdown-clock">
+                        <span id="single_x_double_countdwnNum"  class="">10</span>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="container mt-3" id="single_x_double_panel" style="background-color: rgb(235 235 235);">
                   <label for="integerInput" class="form-label">   <span id="single_x_double_Q1"></span>&nbsp;<span id="single_x_double_op"></span>&nbsp;<span id="single_x_double_Q2"></span></label>
@@ -73,7 +80,7 @@
                   <div class="row">
                     <div class="col-12">
                       <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                        <input class="form-check-input" type="checkbox" role="switch" id="single_x_double_patience_switch">
                         <label class="form-check-label" for="flexSwitchCheckChecked">Check Your Patience</label>
                       </div>
                     </div>
@@ -98,6 +105,13 @@
                       <option value="3">/</option>
                     </select>
                   </div>
+                  <div class="col-auto float-end" id="single_x_triple_countrPanel">
+                    <div >
+                      <div id="countdownClock" class="countdown-clock">
+                        <span id="single_x_triple_countdwnNum"  class="">10</span>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="container mt-3" id="single_x_triple_panel" style="background-color: rgb(235 235 235);">
                   <label for="integerInput" class="form-label">   <span id="single_x_triple_Q1"></span>&nbsp;<span id="single_x_triple_op"></span>&nbsp;<span id="single_x_triple_Q2"></span></label>
@@ -111,7 +125,7 @@
                   <div class="row">
                     <div class="col-12">
                       <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                        <input class="form-check-input" type="checkbox" role="switch" id="single_x_triple_patience_switch">
                         <label class="form-check-label" for="flexSwitchCheckChecked">Check Your Patience</label>
                       </div>
                     </div>
@@ -136,6 +150,13 @@
                       <option value="3">/</option>
                     </select>
                   </div>
+                  <div class="col-auto float-end" id="double_x_double_countrPanel" >
+                    <div >
+                      <div id="countdownClock" class="countdown-clock">
+                        <span id="double_x_double_countdwnNum"  class="">10</span>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="container mt-3" id="double_x_double_panel" style="background-color: rgb(235 235 235);">
                   <label for="integerInput"  class="form-label ">   <span id="double_x_double_Q1"></span>&nbsp;<span id="double_x_double_op"></span>&nbsp;<span id="double_x_double_Q2"></span></label>
@@ -149,7 +170,7 @@
                   <div class="row">
                     <div class="col-12">
                       <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                        <input class="form-check-input" type="checkbox" role="switch" id="double_x_double_patience_switch">
                         <label class="form-check-label" for="flexSwitchCheckChecked">Check Your Patience</label>
                       </div>
                     </div>
@@ -174,6 +195,13 @@
                       <option value="3">/</option>
                     </select>
                   </div>
+                  <div class="col-auto float-end" id="double_x_triple_countrPanel" >
+                    <div >
+                      <div id="countdownClock" class="countdown-clock">
+                        <span id="double_x_triple_countdwnNum"  class="">10</span>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="container mt-3" id="double_x_triple_panel" style="background-color: rgb(235 235 235);">
                   <label for="integerInput" class="form-label">   <span id="double_x_triple_Q1"></span>&nbsp;<span id="double_x_triple_op"></span>&nbsp;<span id="double_x_triple_Q2"></span></label>
@@ -187,7 +215,7 @@
                   <div class="row">
                     <div class="col-12">
                       <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                        <input class="form-check-input" type="checkbox" role="switch" id="double_x_triple_patience_switch">
                         <label class="form-check-label" for="flexSwitchCheckChecked">Check Your Patience</label>
                       </div>
                     </div>
@@ -212,6 +240,13 @@
                       <option value="3">/</option>
                     </select>
                   </div>
+                  <div class="col-auto float-end" id="triple_x_triple_countrPanel">
+                    <div >
+                      <div id="countdownClock" class="countdown-clock">
+                        <span id="triple_x_triple_countdwnNum"  class="">10</span>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="container mt-3" id="triple_x_triple_panel" style="background-color: rgb(235 235 235);">
                   <label for="integerInput" class="form-label">   <span id="triple_x_triple_Q1"></span>&nbsp;<span id="triple_x_triple_op"></span>&nbsp;<span id="triple_x_triple_Q2"></span></label>
@@ -225,7 +260,7 @@
                   <div class="row">
                     <div class="col-12">
                       <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                        <input class="form-check-input" type="checkbox" role="switch" id="triple_x_triple_patience_switch">
                         <label class="form-check-label" for="flexSwitchCheckChecked">Check Your Patience</label>
                       </div>
                     </div>
@@ -263,7 +298,7 @@
                   <div class="row">
                     <div class="col-12">
                       <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                        <input class="form-check-input" type="checkbox" role="switch" id="custom_x_digit_patience_switch">
                         <label class="form-check-label" for="flexSwitchCheckChecked">Check Your Patience</label>
                       </div>
                     </div>
