--- a/Views/topics/memory_builder_comp.html
+++ b/Views/topics/memory_builder_comp.html
@@ -22,7 +22,7 @@
         <br/>
         <div id="RAM_start_Panel" >
           <div style="background-color:#f1f1ff;" class="text-center">
-            <span style="font-size: smaller;"> You will be shown 5 single Digit numbers for 5 seconds. After that you will have to write in same order.</span>
+            <span style="font-size: smaller;"> You will be shown 5 single Digit numbers for 5 seconds. You will have to write in same order in 5 seconds.</span>
           </div> 
           <br/>
           <div class="text-center">
